<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_photos"
                android:layout_width="250dp"
                android:layout_height="300dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"/>


                <ImageView
                    android:scaleType="fitXY"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:paddingTop="22dp"
                    android:paddingLeft="10dp"
                    android:src="@drawable/ic_time"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="25dp"
                        android:paddingLeft="10dp"
                        android:textSize="22sp"
                        android:gravity="center_vertical"
                        android:text="@string/prep"
                        />

                    <TextView
                        android:id="@+id/tv_preps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padTop"
                        android:paddingLeft="15dp"
                        android:textSize="20sp"
                        android:gravity="center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:textSize="22sp"
                        android:gravity="center_vertical"
                        android:text="@string/cooks"/>

                    <TextView
                        android:id="@+id/tv_cooks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padTop"
                        android:paddingLeft="15dp"
                        android:textSize="20sp"
                        android:gravity="center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:textSize="22sp"
                        android:gravity="center_vertical"
                        android:text="@string/ready"/>
                    <TextView
                        android:id="@+id/tv_ready"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padTop"
                        android:paddingLeft="15dp"
                        android:textSize="20sp"
                        android:gravity="center_vertical"
                        />

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/tv_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@android:color/black"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/tv_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp" />

    </LinearLayout>

</ScrollView>